--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/react": "^2.3.6",
     "@prisma/client": "^5.14.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
