added Cloudinary Upload button and added api endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+AUTH_SECRET="somethingreallysecret"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="YOUR CLOUD NAME"
+NEXT_PUBLIC_CLOUDINARY_API_KEY="YOUR API KEY"
+CLOUDINARY_API_SECRET="somethingreallysecret"
