--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.14.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
