--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ AUTH_SECRET="somethingreallysecret"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="YOUR CLOUD NAME"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="YOUR API KEY"
 CLOUDINARY_API_SECRET="somethingreallysecret"
+
+NEXT_PUBLIC_PUSHER_APP_KEY="d9432788a46cdf9fb375"
+PUSHER_APP_ID="Your app id"
+PUSHER_SECRET="Your pusher secret"
+PUSHER_CLUSTER="Your cluster"
