--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ NEXT_PUBLIC_PUSHER_APP_KEY="d9432788a46cdf9fb375"
 PUSHER_APP_ID="Your app id"
 PUSHER_SECRET="Your pusher secret"
 PUSHER_CLUSTER="Your cluster"
+
+RESEND_API_KEY="YOUR RESEND API KEY"
+
+HOST_URL="http://localhost:3000"
