--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ PUSHER_CLUSTER="Your cluster"
 RESEND_API_KEY="YOUR RESEND API KEY"
 
 HOST_URL="http://localhost:3000"
+
+GITHUB_CLIENT_ID="YOUR GITHUB CLIENT ID"
+GITHUB_CLIENT_SECRET="YOUR GITHUB SECRET"
