added google login support

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ HOST_URL="http://localhost:3000"
 
 GITHUB_CLIENT_ID="YOUR GITHUB CLIENT ID"
 GITHUB_CLIENT_SECRET="YOUR GITHUB SECRET"
+
+GOOGLE_CLIENT_ID="YOUR GITHUB CLIENT ID"
+GOOGLE_CLIENT_SECRET="YOUR GITHUB SECRET"
