fixed build issues

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ PUSHER_CLUSTER="Your cluster"
 
 RESEND_API_KEY="YOUR RESEND API KEY"
 
-HOST_URL="http://localhost:3000"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 
 GITHUB_CLIENT_ID="YOUR GITHUB CLIENT ID"
 GITHUB_CLIENT_SECRET="YOUR GITHUB SECRET"
